# os-realization

./: .gitignore  CMakeLists.txt
input-output/: ex1.txt  keyboard-events.c  task.txt
memory-management/allocating-memory/: ex3  ex3.c  ex3.txt  task.txt
memory-management/examples/: note.txt
memory-management/virtual-memory/random-password/: ex1_hack.sh  password.c  task.txt
processes-scheduling/agent-controller/: agent.c  controller.c  task.txt
processes-scheduling/worker-scheduler/: scheduler.c  task.txt  worker.c
processes-threads/channel-subscriber/: channel.c  ex1.sh  ex1.txt  publisher.c  subscriber.c  task.txt
processes-threads/multiforks/: ex3.c  task.txt
processes-threads/prime-numbers/: ex4  ex4.c  ex4.sh  ex4_exp.txt  ex4_res.txt  task.txt
processes-threads/simplistic-shell/: ex4.c  task.txt
processes-threads/thread-struct/: ex2.c  ex2.sh  task.txt
processes-threads/threads-time/: ex1.c  task.txt
